--- a/_/css/libtech.main.css
+++ b/_/css/libtech.main.css
@@ -770,10 +770,10 @@ body.international .shopping-cart-wrapper { display: none; }
 .product-details .image-list-thumbs li { float: left; }
 .product-details .image-list-thumbs li a img { -webkit-opacity: 0.65; -moz-opacity: 0.65; -ms-opacity: 0.65; -o-opacity: 0.65; opacity: 0.65; -webkit-transition: opacity 200ms ease-in-out; -moz-transition: opacity 200ms ease-in-out; -ms-transition: opacity 200ms ease-in-out; -o-transition: opacity 200ms ease-in-out; transition: opacity 200ms ease-in-out; }
 .product-details .image-list-thumbs li a:hover img, .product-details .image-list-thumbs li a:focus img, .product-details .image-list-thumbs li a.active img { -webkit-opacity: 1; -moz-opacity: 1; -ms-opacity: 1; -o-opacity: 1; opacity: 1; }
-.product-details .product-details-right .product-note-wrapper { padding-bottom: 10px; }
+.product-details .product-details-right .product-note-wrapper { padding-bottom: 10px; clear: both; }
 .product-details .product-details-right .product-note-wrapper .product-note { text-align: center; padding-bottom: 25px; max-width: 540px; margin-top: -20px; }
 .product-details .product-details-right .product-note-wrapper .product-note span { display: block; }
-.product-details .product-price { font-size: 1.4em; padding-bottom: 20px; font-weight: bold; }
+.product-details .product-price { font-size: 1.4em; padding-bottom: 20px; font-weight: bold; clear: both; }
 .product-details .product-price .price-logo, .product-details .product-price .price-graphic, .product-details .product-price .price-logo-five, .product-details .product-price .price-graphic-five { display: none; }
 .product-details .product-price .price-logo.active, .product-details .product-price .price-graphic.active, .product-details .product-price .price-logo-five.active, .product-details .product-price .price-graphic-five.active { display: inline-block; }
 .product-details .product-price .price { display: inline-block; }
